task overflow issues fixed

--- a/client/front_end/src/index.css
+++ b/client/front_end/src/index.css
@@ -8,6 +8,7 @@
   background-attachment: fixed;
   border-style: solid;
   border-color: black;
+  min-height: 100vh;
   border-width: 1px;
   margin-left: "2px";
   width: 100%;
